--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ python:
 env:
   - DJANGO_VERSION=1.4.6
   - DJANGO_VERSION=1.5.2
+  - LIFESTREAMS_LOGGER_HANDLER=console
 install:
   - pip install Django==$DJANGO_VERSION
 script:
