--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,15 @@ python:
   - "2.6"
   - "2.7"
 env:
-  - LIFESTREAMS_LOGGER_HANDLER=console DJANGO_VERSION=1.4.6
-  - LIFESTREAMS_LOGGER_HANDLER=console DJANGO_VERSION=1.5.2
+  - DJANGO_VERSION=1.4.6
+  - DJANGO_VERSION=1.5.2
 install:
-  - pip install Django==$DJANGO_VERSION
+  - pip install Django==$DJANGO_VERSION --use-mirrors
+  - pip install coveralls --use-mirrors
 script:
-  - python setup.py test
+  - coverage run setup.py test
+after_success:
+  - coveralls
 branches:
   only:
     - master
