--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,6 @@ develop-eggs
 lib
 lib64
 __pycache__
-example_project
 .env
 README.html
 
@@ -32,3 +31,6 @@ nosetests.xml
 
 # Sublime
 *.sublime-*
+
+.env
+*.db
